--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
 
 /* En-tête */
 header {
-    background: #799baf;
+    background: #35424a;
     color: #ffffff;
     padding: 10px 0;
     text-align: center;
